# MarketIntelli

./: .gitignore  .gitmodules  0HBS2025290820256728B882492F427DA0262A1392E16E95.docx  CLAUDE.md  India_Airports_Database_incl_green_airports.xlsx  README_SolarWindAssessment.md  UI_REVIEW.md  batch_assess.py  batch_log.txt  chart_data (1).csv  dc-extracted-19022026-final.csv  dc_118.csv  docker-compose.yml  fix_report.py  refex-mi-homepage .html  reward2_data_workbook.xlsx  v2.docx
alembic/: env.py
backend/: .cache.sqlite  .env.example  Dockerfile  alembic.ini  assessment_service.py  create_tables.py  dc_enriched_286.geojson  dc_final_merged.geojson  direct_test.py  enrich_datacenters.py  enrich_dc_data.py  enriched_datacenters.json  force_copy.py  main.py  pyproject.toml  reproduce_bug.py  requirements.txt  test_power_seed.py  verify_api.py  verify_power_data.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_daily_re_generation.py  a1b2c3d4e5f6_add_gee_json_credentials.py  a3f7c9e2d851_add_geocode_columns.py  de25face58fe_add_groundwater_and_google_credentials.py  f3a8b2c1d9e7_add_energy_source_to_tariff_records.py  g5b9c3d2e1a8_add_assessment_reports_table.py  h7c1d4e2f9a3_add_scores_to_assessment_reports.py  i8d2e5f1c9b4_add_daily_briefs_table.py  j9e3f6a2b1c5_add_analysis_json_to_assessment_reports.py  k1f4g7h2i5j8_add_power_mw_to_assessment_reports.py
backend/app/: main.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/data/: airports.json  gee_cache.sqlite  powerhouse.geojson
(+170 files in other folders)
